--- a/app/javascript/flavours/glitch/styles/components/status.scss
+++ b/app/javascript/flavours/glitch/styles/components/status.scss
@@ -1112,3 +1112,16 @@ a.status-card.compact:hover {
     border-color: lighten($ui-base-color, 12%);
   }
 }
+
+.status__comments {
+  margin-left: 30px;
+  border-left: 1px solid lighten($ui-base-color, 8%);
+
+  .status__avatar, .status__relative-time {
+    display: none;
+  }
+
+  .display-name strong {
+    display: inline-block;
+  }
+}
