feat: better action bar button style for mobile

--- a/app/javascript/flavours/glitch/styles/components/status.scss
+++ b/app/javascript/flavours/glitch/styles/components/status.scss
@@ -523,13 +523,13 @@
   align-items: center;
   display: flex;
   margin-top: 8px;
-}
+  justify-content: space-between;
 
-.status__action-bar-button {
-  margin-right: 18px;
-
-  &.icon-button--with-counter {
-    margin-right: 14px;
+  &__buttons {
+    display: flex;
+    justify-content: space-between;
+    max-width: 250px;
+    flex-grow: 1;
   }
 }
 
